<resources>
    <string name="app_name">TABQY Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="forgot_your_details">Forgot Your Details</string>
    <string name="send_details">Send Details</string>
    <string name="title_activity_dash_borad">DashBoradActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="table">Table</string>
    <string name="dashboard">Dashboard</string>
    <string name="menu">Menu</string>
    <string name="today_s_special">Today\'s Special</string>
    <string name="today_special">Today\'s\nSpecial</string>
    <string name="hot_deal">Hot Deal</string>
    <string name="order_in_progress">Order in Progress</string>
    <string name="order_progress">Order\nin Progress</string>
    <string name="order_history">Order History</string>
    <string name="order_n_history">Order\nHistory</string>
    <string name="feedback">Feedback</string>
    <string name="about_restaurant">About Restaurant</string>
    <string name="brunch">Brunch</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="breakfast">Breakfast</string>
    <string name="customer_details">Customer Details</string>
    <string name="order_id">Order Id</string>
    <string name="date">Date</string>
    <string name="customer_ph_no">Customer Ph.No:</string>
    <string name="customer_name">Customer Name</string>
    <string name="total_cost">Total Cost</string>
    <string name="customer_address">Customer Address</string>
    <string name="submit">Submit</string>
    <string name="order">Order</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="ambience">Ambience</string>
    <string name="service">Service</string>
    <string name="overall_experience">Overall Experience</string>
    <string name="email_address">Email Address</string>
    <string name="thank_you_after_feedback">Thank You after feedback</string>
    <string name="thank_you_for_giving_us_opportunity_to_service_you">Thank You for giving us \nopportunity to service you.</string>
    <string name="please_visit_again">PLEASE VISIT AGAIN!</string>
    <string name="home_delivery">Home Delivery</string>

    <string-array name="order_list">
        <item>No Order </item>
    </string-array>

    <string-array name="table_list">
        <item> No Table</item>
    </string-array>


    <string name="order_value">Order Value</string>
    <string name="table_no">Table No.</string>
    <string name="order_time">Order Time</string>
    <string name="waiter_name">Waiter Name</string>
    <string name="waiter">Waiter</string>
    <string name="details">Details</string>
    <string name="logout">Logout</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="my_profile">My Profile</string>
    <string name="designation_name">Designation</string>
    <string name="food_detail">Food Details</string>
    <string name="related_items">Related Items</string>
    <string name="submit_order">Submit Order</string>
    <string name="complete_order">Complete Order</string>
    <string name="add_more">Add More</string>
    <string name="order_list_for_table_1">Order List for Table 1</string>
    <string name="order_list">Order List</string>
    <string name="search">Search</string>
    <string name="msg_no_connection">Please check your internet connection.</string>
    <string name="server_error">Server error</string>
    <string name="receipt">Receipt</string>
    <string name="served_by">Served By</string>
    <string name="price">Price</string>
    <string name="qty">Qty</string>
    <string name="ea">Ea</string>
    <string name="item">Item</string>
    <string name="back">Back</string>


    <string-array name="dish_list">
        <item>Afgani Dishes</item>
        <item>Continental Dishes</item>
        <item>Indian Dishes</item>
        <item>American Dishes</item>
        <item>Italian Dishes</item>
        <item>Chinese Dishes</item>
        <item>Mexican Dishes</item>
        <item>Japanese Dishes</item>
        <item>South Indian Dishes</item>
        <item>North Indian Dishes</item>
    </string-array>


    <string-array name="dish_types">
        <item>From Tandoor</item>
        <item>Bread</item>
        <item>Soup</item>
        <item>Chicken</item>
        <item>Mixed Vegetables</item>
        <item>Sweet Desert</item>
        <item>Ice cream</item>
    </string-array>


    <!-- Printer string-->


    <string name="btn_discovery">Discovery</string>
    <string name="title_target">Target</string>
    <string name="title_printerseries">Printer Series</string>
    <string name="title_lang">Lang</string>
    <string name="btn_samplereceipt">Sample Receipt</string>
    <string name="btn_samplecoupon">Sample Coupon</string>
    <string name="btn_restart">Restart</string>
    <string name="title_activity_discovery">DiscoveryActivity</string>
    <string name="title_printerlist">Printer List</string>
    <string name="default_target">TCP:192.168.192.168</string>
    <string name="title_warnings">Printer Warnings</string>
    <string name="print_job_id">ABC123</string>
    <string name="title_err_code">Error Code</string>
    <string name="title_err_method">Method</string>
    <string name="title_msg_result">Result</string>
    <string name="title_msg_description">Description</string>
    <string name="printerseries_m10">TM-m10 Series</string>
    <string name="printerseries_m30">TM-m30 Series</string>
    <string name="printerseries_p20">TM-P20 Series</string>
    <string name="printerseries_p60">TM-P60 Series</string>
    <string name="printerseries_p60ii">TM-P60II Series</string>
    <string name="printerseries_p80">TM-P80 Series</string>
    <string name="printerseries_t20">TM-T20 Series</string>
    <string name="printerseries_t60">TM-T60 Series</string>
    <string name="printerseries_t70">TM-T70 Series</string>
    <string name="printerseries_t81">TM-T81 Series</string>
    <string name="printerseries_t82">TM-T82 Series</string>
    <string name="printerseries_t83">TM-T83 Series</string>
    <string name="printerseries_t88">TM-T88 Series</string>
    <string name="printerseries_t90">TM-T90 Series</string>
    <string name="printerseries_t90kp">TM-T90KP Series</string>
    <string name="printerseries_u220">TM-U220 Series</string>
    <string name="printerseries_u330">TM-U330 Series</string>
    <string name="printerseries_l90">TM-L90 Series</string>
    <string name="printerseries_h6000">TM-H6000 Series</string>
    <string name="lang_ank">ANK</string>
    <string name="lang_japanese">JAPANESE</string>
    <string name="lang_chinese">CHINESE</string>
    <string name="lang_taiwan">TAIWAN</string>
    <string name="lang_korean">KOREAN</string>
    <string name="lang_thai">THAI</string>
    <string name="lang_southasia">SOUTH ASIA</string>
    <string name="handlingmsg_warn_receipt_near_end">Roll paper is nearly end.\n</string>
    <string name="handlingmsg_warn_battery_near_end">Battery level of printer is low.\n</string>
    <string name="handlingmsg_err_no_response">Please check the connection of the printer and the mobile terminal.\nConnection get lost.\n</string>
    <string name="handlingmsg_err_cover_open">Please close roll paper cover.\n</string>
    <string name="handlingmsg_err_receipt_end">Please check roll paper.\n</string>
    <string name="handlingmsg_err_paper_feed">Please release a paper feed switch.\n</string>
    <string name="handlingmsg_err_autocutter">Please remove jammed paper and close roll paper cover.\nRemove any jammed paper or foreign substances in the printer, and then turn the printer off and turn the printer on again.\n</string>
    <string name="handlingmsg_err_need_recover">Then, If the printer doesn\'t recover from error, please cycle the power switch.\n</string>
    <string name="handlingmsg_err_unrecover">Please cycle the power switch of the printer.\nIf same errors occurred even power cycled, the printer may out of order.</string>
    <string name="handlingmsg_err_overheat">Please wait until error LED of the printer turns off. \n</string>
    <string name="handlingmsg_err_head">Print head of printer is hot.\n</string>
    <string name="handlingmsg_err_motor">Motor Driver IC of printer is hot.\n</string>
    <string name="handlingmsg_err_battery">Battery of printer is hot.\n</string>
    <string name="handlingmsg_err_wrong_paper">Please set correct roll paper.\n</string>
    <string name="handlingmsg_err_battery_real_end">Please connect AC adapter or change the battery.\nBattery of printer is almost empty.\n</string>
    <string name="handlingmsg_err_offline">Printer is offline.\n</string>
    <string name="sold_out">Sold Out</string>
    <string name="food_status">This product is sold out</string>
    <string name="complete_address">Please fill complete address and submit.</string>


    <!--Progress Messages -->
    <string name="generate_invoice">Generating Invoice</string>
    <string name="print_invoice">Printing Invoice</string>
    <string name="loading_restaurant_profile">Loading Restaurant Profile</string>
    <string name="loading_waiter_profile">Loading waiter Profile</string>
    <string name="loading_feedback_questions">Loading Feedback Questions</string>
    <string name="sending_feedback_response">Sending Feedback Response</string>
    <string name="saving_customer_info">Saving Customer Details</string>
    <string name="loading_menu_option">Loading Menu Options</string>
    <string name="loading_cuisines">Loading %1$s Cuisines</string>
    <string name="loading_today_hot_deals">Loading Today hot deals</string>
    <string name="searching_food">Searching Food</string>
    <string name="loading_progress_order_list">Loading Progress Order List</string>
    <string name="loading_order_history">Loading Order History</string>
    <string name="loading_today_specials">Loading Today Specials</string>
    <string name="loading_food_types">Loading Food Types</string>
    <string name="fetching_food_list">Fetching Food List</string>
    <string name="fetching_booked_table_list">Fetching Booked Table List</string>
    <string name="fetching_table_list">Fetching Table List</string>
    <string name="adding_order">Submitting Order</string>

    <string name="completing_order">Completing Order</string>
    <string name="reset_password">Resetting password</string>
    <string name="login_progress">Logging in</string>
    <string name="validate_subscription">Validating...</string>
</resources>
