<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/headerText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        android:text="@string/order_in_progress"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:orientation="horizontal">

        <TextView
            style="@style/DarkGreyMediumTextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:layout_gravity="center"
            android:text="@string/date"/>
        <TextView
            style="@style/DarkGreyMediumTextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1.1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:layout_gravity="center"
            android:text="@string/table_no"/>
        <TextView
            style="@style/DarkGreyMediumTextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:layout_gravity="center"
            android:text="@string/order_value"/>
        <TextView
            style="@style/DarkGreyMediumTextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:layout_gravity="center"
            android:text="@string/order_time"/>

        <TextView
            style="@style/DarkGreyMediumTextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:layout_gravity="center"
            android:text="@string/waiter_name"
            android:id="@+id/textView2" />

        <TextView
            style="@style/DarkGreyMediumTextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/dp_10"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorWhite"
            android:text="@string/feedback"/>
        <TextView
            style="@style/DarkGreyMediumTextViewStyle"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_margin="@dimen/dp_10"
            android:layout_gravity="center"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:text="@string/details"/>
    </LinearLayout>
  </LinearLayout>