<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/login_bg"
    android:layout_height="match_parent"
    tools:context="com.tabqy1.activity.LoginActivity">



    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/login_logo"
        android:layout_marginBottom="@dimen/dp_30"
        android:layout_above="@+id/etUserName"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_above="@+id/etUserName"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dp_10"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        android:text="@string/forgot_your_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/etUserName"
        android:layout_width="@dimen/dp_300"
        android:inputType="textEmailAddress"
        android:textAppearance="?android:textAppearanceMedium"
        android:hint="@string/email_address"
        android:drawableLeft="@drawable/email_icon"
        android:drawablePadding="@dimen/dp_5"
        android:padding="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/cardview_light_background"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_below="@id/etUserName"
        android:layout_width="@dimen/dp_150"
        android:padding="10dp"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/send_details"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />

</RelativeLayout>
