<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context="com.tabqy1.activity.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/login_logo"
        android:layout_marginBottom="@dimen/dp_30"
        android:layout_above="@+id/etUserName"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="@dimen/dp_300"
        android:hint="@string/password"
        android:text=""
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:padding="@dimen/dp_5"
        android:drawableLeft="@drawable/password_icon"
        android:layout_marginTop="@dimen/dp_5"
        android:drawablePadding="@dimen/dp_5"
        android:background="@color/cardview_light_background"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@id/etUserName"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_below="@id/etPassword"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dp_10"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        android:text="@string/forgot_your_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnLogin"
        android:layout_below="@id/tvForgotPassword"
        android:layout_width="@dimen/dp_150"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/login"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />

    <TextView
        android:visibility="gone"
        android:layout_below="@id/btnLogin"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dp_10"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/holo_green_light"
        android:text="Change your IP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="@dimen/dp_300"
        android:inputType="text"
        android:textAppearance="?android:textAppearanceMedium"
        android:hint="@string/username"
        android:drawableLeft="@drawable/user_icon"
        android:padding="@dimen/dp_5"
        android:drawablePadding="@dimen/dp_5"
        android:background="@color/cardview_light_background"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_alignStart="@+id/etPassword"

        />
</RelativeLayout>
