<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.tabqy1.fragments.MyProfileFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="30dp"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/dp_30"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            />

    </LinearLayout>

    <LinearLayout

        android:layout_width="0dp"
        android:layout_weight="1"
        android:paddingLeft="@dimen/dp_10"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="5dp"
           android:orientation="horizontal">

           <TextView
               style="@style/DarkGreySmallTextViewStyle"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="@string/name" />

           <TextView
               style="@style/TitleLargeTextViewStyle"
               android:id="@+id/tvName"
               android:layout_width="0dp"
               android:layout_weight="2"

               android:layout_height="wrap_content" />

       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/DarkGreySmallTextViewStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/designation_name" />

            <TextView
                style="@style/TitleLargeTextViewStyle"
                android:id="@+id/tvDesignation"
                android:layout_width="0dp"
                android:layout_weight="2"

                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/DarkGreySmallTextViewStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" android:text="Employee Code" />

            <TextView
                style="@style/TitleLargeTextViewStyle"
                android:id="@+id/tvEmployeeCode"
                android:layout_width="0dp"
                android:layout_weight="2"

                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/DarkGreySmallTextViewStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/total_cost" />

            <TextView
                style="@style/TitleLargeTextViewStyle"
                android:id="@+id/tvTotalCost"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>

</FrameLayout>
